k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ffl-playoffs
  labels:
    name: ffl-playoffs
    app: ffl-playoffs-api
