k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ffl-playoffs-api
  namespace: ffl-playoffs
  labels:
    app: ffl-playoffs-api
spec:
  type: ClusterIP
  selector:
    app: ffl-playoffs-api
  ports:
  - name: https
    port: 443
    targetPort: 443
    protocol: TCP
